<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.ktu_mantra.ktu.ktumantra_syllabusquestionpaperandcgpacalculator.ModuleActivity">

    <include
        android:id="@id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7"
        >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/cardView_module1"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/m1"
            android:gravity="center"
            android:textSize="20sp"
            android:background="@drawable/ripple_effect"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/ripple_effect"
        android:id="@+id/cardView_module2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/m2"
            android:gravity="center"
            android:textSize="20sp"

            android:background="@drawable/ripple_effect"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/ripple_effect"
        app:cardUseCompatPadding="true"
        android:id="@+id/cardView_module3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/m3"
            android:gravity="center"
            android:textSize="20sp"

            android:background="@drawable/ripple_effect"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/ripple_effect"
        android:id="@+id/cardView_module4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/m4"
            android:gravity="center"

            android:background="@drawable/ripple_effect"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/ripple_effect"
        android:id="@+id/cardView_module5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/m5"
            android:gravity="center"
            android:textSize="20sp"

            android:background="@drawable/ripple_effect"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/ripple_effect"
        android:id="@+id/cardView_module6">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/m6"
            android:gravity="center"
            android:textSize="20sp"

            android:background="@drawable/ripple_effect"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/ripple_effect"
        android:id="@+id/cardView_textbook">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/textbook"
            android:gravity="center"
            android:textSize="20sp"

            android:background="@drawable/ripple_effect"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

    </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/adView"
            android:background="@android:color/white">

            <include layout="@layout/samasya_ads"
                android:id="@+id/samasya_ads"/>

        </RelativeLayout>

        <!--<com.google.android.gms.ads.AdView-->
            <!--android:id="@+id/adView"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--ads:adSize="BANNER"-->
            <!--ads:adUnitId="@string/banner_ad_home"-->
            <!--android:layout_alignParentBottom="true">-->

        <!--</com.google.android.gms.ads.AdView>-->

    </LinearLayout>
    </LinearLayout>


