<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    android:background="@drawable/schedule_view_background"
    android:layout_width="300.0dip"
    android:layout_height="wrap_content"
    android:layout_marginTop="32.0dip"
    android:layout_marginBottom="64.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:textSize="15.0sp"
        android:textColor="#ffffffff"
        android:gravity="center"
        android:padding="8.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_lesson_title" />

    <View
        android:background="@color/bar_button_dark_gray"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginTop="8.0dip"
        android:layout_marginBottom="8.0dip" />

    <ScrollView
        android:paddingLeft="8.0dip"
        android:paddingRight="8.0dip"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:minHeight="80.0dip"
        android:layout_weight="1.0">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/list_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

    <View
        android:background="@color/bar_button_dark_gray"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginTop="8.0dip" />

    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="8.0dip"
        android:paddingTop="10.0dip"
        android:paddingRight="4.0dip"
        android:paddingBottom="8.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:textSize="14.0sp"
            android:textColor="#ffffffff"
            android:layout_gravity="center|left"
            android:id="@+id/button_delete_lesson"
            android:background="@drawable/lesson_list_delete_button_selector"
            android:paddingLeft="12.0dip"
            android:paddingRight="12.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="32.0dip"
            android:text="@string/delete_lesson_button" />

        <Button
            android:textSize="14.0sp"
            android:textColor="#ffffffff"
            android:layout_gravity="center|left"
            android:id="@+id/button_delete_all"
            android:background="@drawable/lesson_list_delete_button_selector"
            android:paddingLeft="12.0dip"
            android:paddingRight="12.0dip"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16.0dip"
            android:minHeight="32.0dip"
            android:text="@string/delete_all_button" />

        <View
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0" />

        <ImageButton
            android:layout_gravity="bottom|center|right"
            android:id="@id/button_close"
            android:background="@drawable/selector_button"
            android:layout_width="44.0dip"
            android:layout_height="44.0dip"
            android:src="@drawable/button_close"
            android:contentDescription="@string/content_desc" />

    </LinearLayout>
</LinearLayout>